# iotdb-native

./: .gitignore  .travis.yml  .travis.yml.disabled  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  build.bat  build.sh
CMake/: Lconv.cmake
include/: iotdb.h
include/tsfile/encoding/: decoder.h  encoder.h  endian_type.h
include/tsfile/file/: file_metadata.h  markers.h  sequence_reader.h  tsfile.h
include/tsfile/file/footer/: chunk_group_footer.h
include/tsfile/file/header/: chunk_header.cpp  chunk_header.h  page_header.h
include/tsfile/file/metadata/: chunk_metadata.h  device_metadata_index.h  file_metadata.h  metadata.h  statistics.h
include/tsfile/read/: sequence_reader.h  tsfile.h
include/tsfile/utils/: bloom_filter.h
include/util/: algorithm.h  bconv.h  bitset.h  buffer_window.h  bytebuffer.h  iotutils.h  rwio.h
include/util/conv/: iterator.h
include/write/schema/: measurement_schema.h
src/: CMakeLists.txt
src/tsfile/file/footer/: chunk_group_footer.cpp
src/tsfile/file/header/: chunk_header.cpp  page_header.cpp
src/tsfile/file/metadata/: chunk_metadata.cpp
src/util/: bytebuffer.cpp  bytebuffer.h
test/: 01-bytebuffer.cpp  02-rwio.cpp  CMakeLists.txt  TsFileSequenceReaderTest.tsfile  build_java.sh  bytebuffer_rwtest.cpp  test.runsettings
test/interop/: HeaderInterop.java
test/iotdb-interop/: .gitignore  build.gradle  settings.gradle
test/iotdb-interop/src/main/java/iotdb/interop/: App.java
test/iotdb-interop/src/main/java/iotdb/interop/testcommand/: ChunkHeaderTestCommand.java  DataSerializer.java  ITestCommand.java  PageHeaderTestCommand.java
test/tsfile/: 01-chunkheader.cpp  chunkheader.cpp  file-sequence_reader.cpp
test/util/: 01-bytebuffer.cpp  02-rwio.cpp  bitset.cpp  buffer_window.cpp  bytebuffer.cpp  java_executor.cpp  java_executor.h  rwio.cpp
